# cfs_frontend

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bash  build.bat  cfs_frontend.rc  cfs_frontend.sln  cfs_frontend.vcxproj  cfs_frontend.vcxproj.filters  dpi_awareness_per_monitor_v2.xml  gen_version.bash  main.cpp  packages.config  resource.h
.github/workflows/: main.yml
src/: CMakeLists.txt  cfs_frontend.rc  main.cpp  picojson.h  resource.h  version.h.in
src/cmake/: extract-nupkg.cmake
src/res/: 1033_Manifest_1.manifest
